--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 </div>
 <div class="hidden md:flex flex-1 justify-end gap-8 items-center">
 <nav class="flex items-center gap-9">
-<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="/templates/AboutMe.html">About</a>
-<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="/templates/Projects.html">Projects</a>
-<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="/templates/Contact.html">Contact</a>
+<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="templates/AboutMe.html">About</a>
+<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="templates/Projects.html">Projects</a>
+<a class="text-sm font-medium leading-normal text-text-sec-light dark:text-text-sec-dark hover:text-primary dark:hover:text-primary transition-colors" href="templates/Contact.html">Contact</a>
 </nav>
 
-<a href="/templates/Contact.html">
+<a href="templates/Contact.html">
 <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-5 bg-primary hover:bg-orange-600 transition-colors text-white text-sm font-bold leading-normal tracking-[0.015em]" href="templates/Contact.html">
 <span class="truncate">Let's Talk</span>
 </button>
@@ -94,7 +94,7 @@
                                             </h2>
 </div>
 <div class="flex flex-wrap gap-4">
-<a href="/templates/Projects.html">
+<a href="templates/Projects.html">
 <button class="flex h-12 min-w-[140px] cursor-pointer items-center justify-center gap-2 rounded-lg bg-primary px-6 text-base font-bold text-white transition-all hover:bg-orange-600 hover:scale-[1.02]">
 <span>See Selected Works</span>
 <span class="material-symbols-outlined !text-[20px]">arrow_downward</span>
@@ -102,7 +102,7 @@
 </a>
 
 
-<a href="/templates/capillan_cv.pdf" download>
+<a href="templates/capillan_cv.pdf" download>
 <button class="flex h-12 min-w-[140px] cursor-pointer items-center justify-center gap-2 rounded-lg border border-gray-200 dark:border-gray-700 bg-surface-light dark:bg-surface-dark px-6 text-base font-bold text-text-main-light dark:text-text-main-dark transition-all hover:bg-gray-50 dark:hover:bg-gray-800 hover:scale-[1.02]">
 <span>Download Resume</span>
 <span class="material-symbols-outlined !text-[20px]">download</span>
@@ -128,7 +128,7 @@
 <!-- Hero Image -->
 <div class="flex-1 lg:h-auto">
 <div class="relative w-full aspect-square md:aspect-[4/3] lg:aspect-square overflow-hidden rounded-2xl bg-gray-100 dark:bg-gray-800">
-<div class="absolute inset-0 bg-center bg-cover transition-transform duration-700 hover:scale-105" data-alt="Modern minimalist workspace setup with laptop and design sketches" style='background-image: url("/images/profile_pic.png");'>
+<div class="absolute inset-0 bg-center bg-cover transition-transform duration-700 hover:scale-105" data-alt="Modern minimalist workspace setup with laptop and design sketches" style='background-image: url("images/profile_pic.png");'>
 </div>
 <!-- Floating Badge -->
 <div class="absolute bottom-6 left-6 right-6 p-4 bg-white/90 dark:bg-black/80 backdrop-blur-sm rounded-xl border border-white/20 shadow-lg">
