--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <!-- Project 1 -->
 <div class="group flex flex-col gap-4 cursor-pointer">
 <div class="overflow-hidden rounded-xl bg-gray-100 dark:bg-gray-800">
-<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="Minimalist banking mobile app interface on a dark background" style='background-image: url("/images/RL\ Cosmetics&Perfumes.png");'>
+<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="Minimalist banking mobile app interface on a dark background" style='background-image: url("images/RL\ Cosmetics&Perfumes.png");'>
 </div>
 </div>
 <div>
@@ -228,7 +228,7 @@
 <!-- Project 2 -->
 <div class="group flex flex-col gap-4 cursor-pointer">
 <div class="overflow-hidden rounded-xl bg-gray-100 dark:bg-gray-800">
-<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="E-commerce website layout featuring fashion products" style='background-image: url("/images/JNJV.png");'>
+<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="E-commerce website layout featuring fashion products" style='background-image: url("images/JNJV.png");'>
 </div>
 </div>
 <div>
@@ -239,7 +239,7 @@
 <!-- Project 3 -->
 <div class="group flex flex-col gap-4 cursor-pointer">
 <div class="overflow-hidden rounded-xl bg-gray-100 dark:bg-gray-800">
-<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="Medical application interface showing health statistics" style='background-image: url("/images/smart-inventory-dashboard.png");'>
+<div class="aspect-[4/3] w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-105" data-alt="Medical application interface showing health statistics" style='background-image: url("images/smart-inventory-dashboard.png");'>
 </div>
 </div>
 <div>
@@ -288,4 +288,5 @@
 </div>
 </footer>
 </div>
+
 </body></html>
